add general html structure

--- a/index.html
+++ b/index.html
@@ -7,6 +7,38 @@
     <title>Tea Cozy</title>
 </head>
 <body>
-    
+
+    <header>
+        <nav>
+            <img src="" alt="">
+            <ul class="navigation">
+                <li>Mission</li>
+                <li>Featured Tea</li>
+                <li>Locations</li>
+            </ul>
+        </nav>
+    </header>
+
+    <main>
+        <div class="intro">
+
+        </div>
+        <div class="tea-of-the-month">
+
+        </div>
+        <div class="locations">
+            
+        </div>
+    </main>
+
+    <footer>
+        <div class="contact">
+
+        </div>
+        <div class="copyright">
+
+        </div>
+    </footer>
+
 </body>
 </html>
