--- a/index.html
+++ b/index.html
@@ -20,24 +20,34 @@
     </header>
 
     <main>
+
+        <!--Introductin section-->
         <div class="intro">
 
         </div>
+
+        <!--Tea of the Month section-->
         <div class="tea-of-the-month">
 
         </div>
+
+        <!--Locations section-->
         <div class="locations">
-            
+
         </div>
+
     </main>
 
     <footer>
+
         <div class="contact">
 
         </div>
+
         <div class="copyright">
 
         </div>
+        
     </footer>
 
 </body>
