add comments in css

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <header>
         <nav>
-            <img src="" alt="">
+            <img src="./resources/images/img-tea-cozy-logo.png" alt="the tea cozy logo">
             <ul class="navigation">
                 <li>Mission</li>
                 <li>Featured Tea</li>
@@ -47,7 +47,7 @@
         <div class="copyright">
 
         </div>
-        
+
     </footer>
 
 </body>
