add footer content and styling, add hyperlinks in nav section

--- a/index.html
+++ b/index.html
@@ -10,11 +10,13 @@
 
     <header>
         <nav>
-            <img src="./resources/images/img-tea-cozy-logo.png" alt="the tea cozy logo">
+            <div class="logo">
+                <img src="./resources/images/img-tea-cozy-logo.png" alt="the tea cozy logo">
+            </div>
             <ul class="navigation">
-                <li>Mission</li>
-                <li>Featured Tea</li>
-                <li>Locations</li>
+                <li><a href="#mission">Mission</a></li>
+                <li><a href="#featured">Featured Tea</a></li>
+                <li><a href="#locations">Locations</a></li>
             </ul>
         </nav>
     </header>
@@ -22,17 +24,17 @@
     <main>
 
         <!--Introductin section-->
-        <div class="intro">
+        <div class="intro" id="mission">
 
         </div>
 
         <!--Tea of the Month section-->
-        <div class="tea-of-the-month">
+        <div class="tea-of-the-month" id="featured">
 
         </div>
 
         <!--Locations section-->
-        <div class="locations">
+        <div class="locations" id="locations">
 
         </div>
 
