add introduction sectin content and styling

--- a/index.html
+++ b/index.html
@@ -25,7 +25,10 @@
 
         <!--Introductin section-->
         <div class="intro" id="mission">
-
+            <div class="headlines">
+                <h2>Our Mission</h2>
+                <h4>Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</h4>
+            </div>
         </div>
 
         <!--Tea of the Month section-->
