add under construction in the rest of the sections

--- a/index.html
+++ b/index.html
@@ -33,12 +33,12 @@
 
         <!--Tea of the Month section-->
         <div class="tea-of-the-month" id="featured">
-
+            under construction
         </div>
 
         <!--Locations section-->
         <div class="locations" id="locations">
-
+            under construction
         </div>
 
     </main>
@@ -46,11 +46,11 @@
     <footer>
 
         <div class="contact">
-
+            under construction
         </div>
 
         <div class="copyright">
-
+            under construction
         </div>
 
     </footer>
