--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./resources/css/style.css">
     <title>Tea Cozy</title>
 </head>
+
 <body>
 
     <header>
@@ -33,7 +35,30 @@
 
         <!--Tea of the Month section-->
         <div class="tea-of-the-month" id="featured">
-            under construction
+            <h2>Tea of the Month</h2>
+            <h4>What's Steeping at The Tea Cozy?</h4>
+            <div class="image-container">
+                <div>
+                    <img src="./resources/images/img-berryblitz.jpg" alt="cup of berry blitz tea">
+                    <h4>Fall Berry Blitz Tea</h4>
+                </div>
+                <div>
+                    <img src="./resources/images/img-spiced-rum.jpg" alt="crate filled with tea-leafes">
+                    <h4>Spiced Rum Tea</h4>
+                </div>
+                <div>
+                    <img src="./resources/images/img-donut.jpg" alt="homemade donut">
+                    <h4>Seasonal Donuts</h4>
+                </div>
+                <div>
+                    <img src="./resources/images/img-myrtle-ave.jpg" alt="cup of tea-bag tea">
+                    <h4>Myrtle Ave Tea</h4>
+                </div>
+                <div>
+                    <img src="./resources/images/img-bedford-bizarre.jpg" alt="cup of bedford bizarre tea">
+                    <h4>Bedford Bizarre Tea</h4>
+                </div>
+            </div>
         </div>
 
         <!--Locations section-->
@@ -56,4 +81,5 @@
     </footer>
 
 </body>
+
 </html>
