--- a/index.html
+++ b/index.html
@@ -88,23 +88,22 @@
                     </div>
                 </div>
             </div>
-
         </div>
-
     </main>
 
     <footer>
-
         <div class="contact">
-            under construction
+            <div>
+                <h2>The Tea Cozy</h2>
+                <h5>contact@theteacozy.com</h5>
+                <h3>917-555-8904</h3>
+            </div>
         </div>
 
         <div class="copyright">
-            under construction
+            <h4>copyright The Tea Cozy 2017</h4>
         </div>
-
     </footer>
 
 </body>
-
 </html>
