finishing touches, all done, site can go online

--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     <link rel="stylesheet" href="./resources/css/style.css">
+    <link rel="shortcut icon" href="./resources/images/tea-cozy-favicon.ico" type="image/x-icon">
+    <link rel="icon" href="./resources/images/tea-cozy-favicon.ico" type="image/x-icon">
     <title>Tea Cozy</title>
 </head>
 
@@ -95,13 +98,13 @@
         <div class="contact">
             <div>
                 <h2>The Tea Cozy</h2>
-                <h5>contact@theteacozy.com</h5>
-                <h3>917-555-8904</h3>
+                <h5><i class="fa fa-envelope fa-lg"></i>  <a href="mailto:contact@theteacozy.com">contact@theteacozy.com</a></h5>
+                <h3><i class="fa fa-phone fa-lg"></i>  917-555-8904</h3>
             </div>
         </div>
 
         <div class="copyright">
-            <h4>copyright The Tea Cozy 2017</h4>
+            <h4><i class="fa fa-copyright fa-lg"></i>  The Tea Cozy 2017</h4>
         </div>
     </footer>
 
