changed image file size

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                     <h4>Myrtle Ave Tea</h4>
                 </div>
                 <div>
-                    <img src="./resources/images/img-bedford-bizarre.jpg" alt="cup of bedford bizarre tea">
+                    <img src="./resources/images/img-bedford-bizarre.png" alt="cup of bedford bizarre tea">
                     <h4>Bedford Bizarre Tea</h4>
                 </div>
             </div>
